# phasorflow

./: .gitignore  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  __init__.py  circuit.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html
benchmarks/: __init__.py  depth_study.py  eeg_benchmark.py  tasks.py
data/: __init__.py  physionet_eeg.py
docs/: gates.md  getting_started.md  index.md  machine_learning.md  neuromorphic.md  traditional_dsa.md  transformer.md
engine/: __init__.py  analytic.py  vectorized.py
examples/: associative_memory.py  circuit_operations.py  circuits.py  depth_scaling.json  ex_01_circuits.py  ex_02_circuit_operations.py  ex_03_shors_algorithm.py  ex_04_neural_binding.py  ex_05_associative_memory.py  ex_06_finance_volatility.py  ex_07_vpc_single.py  ex_08_phasor_transformer.py  ex_09_real_eeg_vpc.py  ex_10_depth_scaling.py  finance_volatility.py  gan.py  memory_recovery.py  neural_binding.py  phasor_transformer.py  shors_algorithm.py  shors_period_finding.py  vpc.py
gates/: base_gate.py  encoding.py  index.html  neuromorphic.py  nonlinear.py  standard.py
getting_started/: index.html
machine_learning/: index.html
models/: __init__.py  gan.py  transformer.py  vpc.py
neuromorphic/: associative_memory.py  index.html  lip_layer.py
notebooks/: 1-Circuits.ipynb  2.1-Circuit-Operations.ipynb  2.2-Shor's-Algorithm.ipynb  2.3-Neural-Binding.ipynb  2.4-Associative-Memory.ipynb  2.5-Finance-Volatility-Phasor.ipynb  3.1-VPC-Single.ipynb  4.1-Phasor-Transformer.ipynb
phasorflow/: __init__.py
phasorflow/examples/: ex_03_shors_algorithm.py  ex_07_vpc_single.py
phasorflow/gates/: __init__.py
phasorflow/models/: vpc.py
phasorflow/neuromorphic/: __init__.py
phasorflow/visualization/: text.py
projects/arxive/: 1-Circuits.ipynb  2.1-Circuit-Operations.ipynb  2.2-Shor's-Algorithm.ipynb  2.3-Neural-Binding.ipynb  2.4-Associative-Memory.ipynb  2.5-Finance-Volatility-Phasor.ipynb  3.1-VPC-Single.ipynb  3.2-VPC-Stacking-Regular.ipynb  3.3-VPC-Stacking-PullBack.ipynb  3.4-VPC-Stacking-NonLinear.ipynb  3.5-BCI-BrainFlow-Binary.ipynb  3.6-BCI-BrainFlow-MultiClass.ipynb  3.7-VPC-Direct.ipynb  4.1-Phasor-Transformer-Regular.ipynb  4.2-Phasor-Transformer-NonLinear.ipynb  4.3-Transformer-Benchmarking.ipynb  4.4-LPM.ipynb  4.5-Transformer-Direct.ipynb  5.1-Phasor-GAN.ipynb  5.2-Phasor-GAN-First-Principle.ipynb  GitHub.ipynb  lpm_weights.npy
search/: search_index.json
tests/: test_benchmarks.py  test_circuit_flow.py  test_correctness.py  test_engine.py  test_gates.py  test_neuromorphic.py
traditional_dsa/: index.html
transformer/: index.html
visualization/: __init__.py  matplotlib_drawer.py  pubstyle.py
