[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phasorflow"
version = "0.1.0"
description = "A Unit Circle (U1) Phasor-based computer simulator."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dibakar Sigdel", email = "your.email@example.com"}
]
keywords = ["physics", "simulation", "unit-circle", "phasor", "computing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/phasorflow"
"Bug Tracker" = "https://github.com/yourusername/phasorflow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["phasorflow*"]
